# fastflow

./: .env.example  README.md  __init__.py  pyproject.toml
db/: __init__.py  manager.py
db/clients/: base.py
engine/: __init__.py  runtime.py
hooks/: env.py  identity.py  system.py
io/: file_manager.py
messaging/: __init__.py
messaging/clients/: __init__.py  base.py  email.py  telegram.py
src/fastflow/: __init__.py
src/fastflow/core/: config.py
src/fastflow/db/: manager.py
src/fastflow/db/clients/: __init__.py  base.py  oracle.py  postgres.py
src/fastflow/engine/: __init__.py  flow.py  task.py
src/fastflow/hooks/: __init__.py  env.py  identity.py  keyvault.py  system.py  tagging.py
src/fastflow/io/: __init__.py  file_manager.py  remote_manager.py
src/fastflow/messaging/: messenger.py
src/fastflow/messaging/clients/: base.py
src/fastflow/storage/: minio_manager.py
src/fastflow/utils/: __init__.py  env.py
test_flows/: example.py
utils/: env.py
